@@ -24,7 +24,7 @@ if ( !defined( 'MEDIAWIKI' ) ) {
 	die( 'Not an entry point.' );
 }
 
-define( 'Validator_VERSION', '0.4.2 alpha' );
+define( 'Validator_VERSION', '0.4.2 rc1' );
 
 // Register the internationalization file.
 $wgExtensionMessagesFiles['Validator'] = dirname( __FILE__ ) . '/Validator.i18n.php';
@@ -37,12 +37,6 @@ $wgExtensionCredits['other'][] = array(
 	'url' => 'http://www.mediawiki.org/wiki/Extension:Validator',
 	'descriptionmsg' => 'validator-desc',
 );
-
-// This function has been deprecated in 1.16, but needed for earlier versions.
-// It's present in 1.16 as a stub, but lets check if it exists in case it gets removed at some point.
-if ( function_exists( 'wfLoadExtensionMessages' ) ) {
-	wfLoadExtensionMessages( 'Validator' );
-}
 
 // Autoload the classes.
 $incDir = dirname( __FILE__ ) . '/includes/';
@@ -82,6 +76,23 @@ $wgAutoloadClasses['ParamManipulationInteger']	= $incDir . 'manipulations/ParamM
 
 $wgAutoloadClasses['ValidatorListErrors'] 		= $incDir . 'parserHooks/Validator_ListErrors.php';
 unset( $incDir );
+
+$wgExtensionFunctions[] = 'efValidatorSetup';
+
+/**
+ * Function for backwards compatibility with MW 1.15.x.
+ * 
+ * @since 0.4.2
+ */
+function efValidatorSetup() {
+	// This function has been deprecated in 1.16, but needed for earlier versions.
+	// It's present in 1.16 as a stub, but lets check if it exists in case it gets removed at some point.
+	if ( function_exists( 'wfLoadExtensionMessages' ) ) {
+		wfLoadExtensionMessages( 'Validator' );
+	}
+	
+	return true;
+}
 
 // Include the settings file.
 require_once 'Validator_Settings.php';
